--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
-    <link rel="icon" href="%PUBLIC_URL%/soham_icon.png" />
+    <link rel="icon" href="/soham_icon.png" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Soham Desai's Portfolio - Software Engineer" />
     <title>Soham Desai</title>
