--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Poppins:wght@300;500;700&display=swap"
       rel="stylesheet"
+      crossorigin="anonymous"
     />
     <link
       rel="stylesheet"
